tests/ui/asm/interpolate-const.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/interpolate-const.rs:11:39
   |
LL |         asm!("/* {0} */", interpolate x);
   |                                       ^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -     let x = "";
LL +     const x: /* Type */ = "";
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0435`.
